ownCloud vulnerability triage

--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -64,6 +64,7 @@
 # oC-SA-2016-002    CVE-2016-1499   8.2.2/8.1.5/8.0.10
 # oC-SA-2016-003    CVE-2016-1500   8.2.2/8.1.5/8.0.10/7.0.12
 # oC-SA-2016-004    CVE-2016-1501   8.1.4/8.0.9
+# oC-SA-2016-005    NFU
 ownCloud 8.2:
   1:
     location: ['/version.php']
