--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -137,6 +137,7 @@
 # CVE-2015-3440 4.1.2   https://wordpress.org/news/2015/04/wordpress-4-1-2/
 # CVE-2015-XXXX 4.2.1   https://wordpress.org/news/2015/04/wordpress-4-2-1/ https://wpvulndb.com/vulnerabilities/7945
 # CVE-2015-3429 4.2.2   https://wordpress.org/news/2015/05/wordpress-4-2-2/ https://www.netsparker.com/cve-2015-3429-dom-xss-vulnerability-in-twenty-fifteen-wordpress-theme/
+# CVE-2015-8834 4.2.2   https://wordpress.org/news/2015/05/wordpress-4-2-2/
 # CVE-2015-5622 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 # CVE-2015-5623 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 # CVE-2015-2213 4.2.4   https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://wpvulndb.com/vulnerabilities/8126
