--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -770,12 +770,13 @@ WordPress plugin google-seo-author-snippets:
     cve: 'http://seclists.org/bugtraq/2016/Apr/131'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 1.7.6 https://0x62626262.wordpress.com/2016/04/21/cm-ad-changer-xss-vulnerability/ https://ad-changer.cminds.com/cm-ad-changer-plugin-free-edition-release-notes/ http://seclists.org/bugtraq/2016/Apr/133
 WordPress plugin cm-ad-changer:
   1:
     location: ['/wp-content/plugins/cm-ad-changer/readme.txt']
-    secure_version: '1.7.6'
+    secure_version: '1.7.8'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://0x62626262.wordpress.com/2016/04/21/cm-ad-changer-xss-vulnerability/ https://ad-changer.cminds.com/cm-ad-changer-plugin-free-edition-release-notes/ http://seclists.org/bugtraq/2016/Apr/133'
+    cve: 'https://ad-changer.cminds.com/cm-ad-changer-plugin-free-edition-release-notes/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin echosign:
