--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -152,18 +152,19 @@
 # CVE-2016-2222 4.4.2   https://wordpress.org/news/2016/02/wordpress-4-4-2-security-and-maintenance-release/ https://codex.wordpress.org/Version_4.4.2 https://core.trac.wordpress.org/changeset/36435
 # CVE-2016-4566 4.5.2   https://wordpress.org/news/2016/05/wordpress-4-5-2/ https://codex.wordpress.org/Version_4.5.2 https://core.trac.wordpress.org/changeset/37382/
 # CVE-2016-4567 4.5.2   https://core.trac.wordpress.org/changeset/37371
+# CVE-2016-XXXX 4.5.3   https://wordpress.org/news/2016/06/wordpress-4-5-3/
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.5.2'
+    secure_version: '4.5.3'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/05/wordpress-4-5-2/ https://codex.wordpress.org/Version_4.5.2 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-4566 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-4567'
+    cve: 'https://wordpress.org/news/2016/06/wordpress-4-5-3/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.5.2'
+    secure_version: '4.5.3'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/05/wordpress-4-5-2/ https://codex.wordpress.org/Version_4.5.2'
+    cve: 'https://wordpress.org/news/2016/06/wordpress-4-5-3/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
