WordPress plugin profile-builder fixes vulnerability

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -899,12 +899,13 @@ WordPress plugin remote-upload:
     cve: 'http://bini.tech/wordpress-remote-upload-unrestricted-file-upload/ https://plugins.trac.wordpress.org/changeset/1435503/remote-upload'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 2.4.1 https://www.wordfence.com/blog/2016/07/vulnerability-profile-builder/
 WordPress plugin profile-builder:
   1:
     location: ['/wp-content/plugings/profile-builder/readme.txt']
-    secure_version: '2.4.1'
+    secure_version: '2.4.2'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.wordfence.com/blog/2016/07/vulnerability-profile-builder/'
+    cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_profile_builder_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin all-in-one-seo-pack:
