--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -911,12 +911,13 @@ WordPress plugin profile-builder:
     cve: 'https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_profile_builder_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 2.3.7 https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_all_in_one_seo_pack_wordpress_plugin.html
 WordPress plugin all-in-one-seo-pack:
   1:
     location: ['/wp-content/plugings/all-in-one-seo-pack/readme.txt']
-    secure_version: '2.3.7'
+    secure_version: '2.3.8'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://sumofpwn.nl/advisory/2016/persistent_cross_site_scripting_in_all_in_one_seo_pack_wordpress_plugin.html'
+    cve: 'https://www.wordfence.com/blog/2016/07/new-xss-vulnerability-all-in-one-seo-pack/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin squirrly-seo:
