--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -293,8 +293,10 @@ WordPress plugin gravity-forms:
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 # CVE-2015-2973 1.4.18
+# CVE-2016-4825 1.8.3
 # CVE-2016-4826 1.8.3
 # CVE-2016-4827 1.8.3
+# CVE-2016-4828 1.8.3
 WordPress plugin usc-e-shop:
   1:
     location: ['/wp-content/plugins/usc-e-shop/readme.txt']
