--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -533,12 +533,13 @@ WordPress plugin cta:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8350 https://www.htbridge.com/advisory/HTB23274'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-8354 1.3.29 https://www.htbridge.com/advisory/HTB23277
 WordPress plugin ultimate-member:
   1:
     location: ['/wp-content/plugins/ultimate-member/readme.txt']
-    secure_version: '1.3.29'
+    secure_version: '1.3.65'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.govview/vuln/detail?vulnId=CVE-2015-8354 https://www.htbridge.com/advisory/HTB23277'
+    cve: 'OVE-20160712-0011 https://sumofpwn.nl/advisory/2016/ultimate_member_local_file_inclusion_vulnerability.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-symposium-pro:
