--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -940,12 +940,13 @@ WordPress plugin aryo-activity-log:
     cve: 'http://seclists.org/fulldisclosure/2016/Jul/25'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# OVE-20160712-0023 6.1 https://sumofpwn.nl/advisory/2016/easy_forms_for_mailchimp_local_file_inclusion_vulnerability.html
 WordPress plugin yikes-inc-easy-mailchimp-extender:
   1:
     location: ['/wp-content/plugins/yikes-inc-easy-mailchimp-extender/readme.txt']
-    secure_version: '6.1'
+    secure_version: '6.1.3'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'OVE-20160712-0023 https://sumofpwn.nl/advisory/2016/easy_forms_for_mailchimp_local_file_inclusion_vulnerability.html'
+    cve: 'https://www.wordfence.com/blog/2016/07/vulnerability-easy-forms-mailchimp/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin wp-fastest-cache:
