--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -437,12 +437,13 @@ WordPress plugin pie-register:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7377 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7682'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# 1.5.50 https://www.davidsopas.com/events-made-easy-wordpress-plugin-csrf-persistent-xss/
 WordPress plugin events-made-easy:
   1:
     location: ['/wp-content/plugins/events-made-easy/readme.txt']
-    secure_version: '1.5.50'
+    secure_version: '1.6.20'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://www.davidsopas.com/events-made-easy-wordpress-plugin-csrf-persistent-xss/'
+    cve: 'OVE-20160729-0001 https://sumofpwn.nl/advisory/2016/cross_site_scripting_vulnerability_in_events_made_easy_wordpress_plugin.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin powerpress:
