--- a/yamls/dotclear.yml
+++ b/yamls/dotclear.yml
@@ -7,11 +7,12 @@
 # CVE-2015-5651 2.8.1
 # CVE-2015-8831 2.8.2 https://hg.dotclear.org/dotclear/rev/65e65154dadf http://blog.curesec.com/article/blog/dotclear-281-XSS-94.html http://www.openwall.com/lists/oss-security/2016/03/05/4
 # CVE-2015-8832 2.8.2 https://hg.dotclear.org/dotclear/rev/198580bc3d80 http://blog.curesec.com/article/blog/dotclear-281-Code-Execution-93.html http://www.openwall.com/lists/oss-security/2016/03/05/4
+# CVE-2016-6523 2.8.2 https://hg.dotclear.org/dotclear/rev/40d0207e520d
 Dotclear:
   1:
     location: ['/inc/prepend.php']
     secure_version: '2.8.2'
     regexp: ['define.*?DC_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8831 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8832 http://dotclear.org/blog/post/2015/10/25/Dotclear-2.8.2 http://blog.curesec.com/article/blog/dotclear-281-Code-Execution-93.html http://blog.curesec.com/article/blog/dotclear-281-XSS-94.html'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8831 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-8832 http://dotclear.org/blog/post/2015/10/25/Dotclear-2.8.2 http://blog.curesec.com/article/blog/dotclear-281-Code-Execution-93.html http://blog.curesec.com/article/blog/dotclear-281-XSS-94.html https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6523'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
