WordPress plugin cool-video-gallery fixes CVE-2015-7527

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -507,7 +507,7 @@ WordPress plugin cm-download-manager:
 WordPress plugin cool-video-gallery:
   1:
     location: ['/wp-content/plugins/cool-video-gallery/readme.txt']
-    secure_version: 'N/A'
+    secure_version: '2.0'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7527 http://www.vapidlabs.com/advisory.php?v=158'
     fingerprint: detect_general
