--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -37,7 +37,11 @@
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3232   7.38/6.36
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3233   7.38/6.36
 # https://drupal.org/SA-CORE-2015-002   CVE-2015-3231   7.38/6.36
-# https://drupal.org/SA-CORE-2015-003   Requested       7.39/6.37
+# https://drupal.org/SA-CORE-2015-003   CVE-2015-6658   7.39/6.37
+# https://drupal.org/SA-CORE-2015-003   CVE-2015-6659   7.39/6.37
+# https://drupal.org/SA-CORE-2015-003   CVE-2015-6660   7.39/6.37
+# https://drupal.org/SA-CORE-2015-003   CVE-2015-6661   7.39/6.37
+# https://drupal.org/SA-CORE-2015-003   CVE-2015-6665   7.39/6.37
 # https://drupal.org/SA-CORE-2015-004   CVE-2015-7943   7.41 CWE-20 not in pyfiscan scope
 # https://drupal.org/SA-CORE-2016-001   CVE-2016-3162   8.0.4/7.43/6.38
 # https://drupal.org/SA-CORE-2016-001   CVE-2016-3163   8.0.4/7.43/6.38
@@ -51,12 +55,13 @@
 # https://drupal.org/SA-CORE-2016-001   CVE-2016-3171   8.0.4/7.43/6.38
 # https://drupal.org/SA-CORE-2016-002   CVE-2016-6211   8.1.3/7.44
 # https://drupal.org/SA-CORE-2016-002   CVE-2016-6212   8.1.3/7.44
+# https://drupal.org/SA-CORE-2016-003   CVE-2016-5385   8.1.7
 Drupal 8:
   1:
     location: ['/core/lib/Drupal.php']
-    secure_version: '8.1.3'
+    secure_version: '8.1.7'
     regexp: ["  const VERSION = '(?P<version>[0-9.]+)"]
-    cve: 'https://drupal.org/SA-CORE-2016-002 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6211 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6212'
+    cve: 'https://drupal.org/SA-CORE-2016-003 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5385'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 7:
