--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -163,18 +163,20 @@
 # CVE-2016-5837 4.5.3   https://wordpress.org/news/2016/06/wordpress-4-5-3/
 # CVE-2016-5838 4.5.3   https://wordpress.org/news/2016/06/wordpress-4-5-3/
 # CVE-2016-5839 4.5.3   https://wordpress.org/news/2016/06/wordpress-4-5-3/
+# CVE-2016-6896 4.6     https://wordpress.org/news/2016/08/pepper/ https://sumofpwn.nl/advisory/2016/path_traversal_vulnerability_in_wordpress_core_ajax_handlers.html
+# CVE-2016-6897 4.6     https://wordpress.org/news/2016/08/pepper/ https://sumofpwn.nl/advisory/2016/path_traversal_vulnerability_in_wordpress_core_ajax_handlers.html
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.5.3'
+    secure_version: '4.6'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/06/wordpress-4-5-3/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5832 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5833 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5834 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5835 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5836 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5837 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5838 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5839'
+    cve: 'https://wordpress.org/news/2016/08/pepper/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6896 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6897 https://sumofpwn.nl/advisory/2016/path_traversal_vulnerability_in_wordpress_core_ajax_handlers.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.5.3'
+    secure_version: '4.6'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2016/06/wordpress-4-5-3/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5832 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5833 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5834 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5835 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5836 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5837 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5838 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-5839'
+    cve: 'https://wordpress.org/news/2016/08/pepper/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6896 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-6897 https://sumofpwn.nl/advisory/2016/path_traversal_vulnerability_in_wordpress_core_ajax_handlers.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
