--- a/yamls/mantisbt.yml
+++ b/yamls/mantisbt.yml
@@ -45,9 +45,9 @@
 # CVE-2014-9624 1.2.19 https://mantisbt.org/bugs/view.php?id=17984
 # CVE-2014-9701 1.2.19 https://mantisbt.org/bugs/view.php?id=17362#c40613
 # CVE-2015-1042 1.2.19
+# CVE-2016-5364 1.2.20 https://mantisbt.org/bugs/view.php?id=20956 http://www.openwall.com/lists/oss-security/2016/06/11/5
 # CVE-2015-5059 1.3.0 https://mantisbt.org/bugs/view.php?id=19873
 # CVE-2014-9759 1.3.0 https://mantisbt.org/bugs/view.php?id=20277 http://www.openwall.com/lists/oss-security/2016/01/02/1
-# CVE-2016-5364 TODO https://mantisbt.org/bugs/view.php?id=20956 http://www.openwall.com/lists/oss-security/2016/06/11/5
 # CVE-2016-7111 1.3.1 https://mantisbt.org/bugs/view.php?id=21263 http://www.openwall.com/lists/oss-security/2016/08/28/1
 MantisBT:
   1:
