--- a/yamls/spip.yml
+++ b/yamls/spip.yml
@@ -2,12 +2,17 @@
 # CVE-2013-7303
 # CVE-2016-3153 3.1.1/3.0.22/2.1.19 possible typo in CVE details for 2.1.19
 # CVE-2016-3154 3.1.1/3.0.22/2.1.19
+# CVE-2016-7980 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/6
+# CVE-2016-7981 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/7
+# CVE-2016-7982 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/8
+# CVE-2016-7998 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/9
+# CVE-2016-7999 3.1.3   http://www.openwall.com/lists/oss-security/2016/10/12/10
 SPIP 3:
   1:
     location: ['/ecrire/inc_version.php']
-    secure_version: '3.1.1'
+    secure_version: '3.1.3'
     regexp: ['\$spip_version_branche.*?(?P<version>3\.[0-9.]+)']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-3153 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-3154'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7980 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7981 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7982 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7998 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-7999'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 SPIP 2:
