WordPress plugin mp3-jplayer fixed CVE-2015-1000008

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1382,7 +1382,7 @@ WordPress plugin wptf-image-gallery:
 WordPress plugin mp3-jplayer:
   1:
     location: ['/wp-content/plugins/mp3-jplayer/readme.txt']
-    secure_version: 'N/A'  # v2.3.2 is vulnerable. new versions published after that
+    secure_version: '2.7.1'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000008 http://www.vapidlabs.com/advisory.php?v=149'
     fingerprint: detect_general
