--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1339,12 +1339,13 @@ WordPress plugin candidate-application-form:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000005 http://www.vapidlabs.com/advisory.php?v=142'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-1000000 1.100 http://www.vapidlabs.com/advisory.php?v=138
 WordPress plugin mailcwp:
   1:
     location: ['/wp-content/plugins/mailcwp/readme.txt']
-    secure_version: '1.100'
+    secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000000 http://www.vapidlabs.com/advisory.php?v=138'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1000000 http://www.vapidlabs.com/advisory.php?v=138 fix in 1.100 was incomplete'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin fast-image-adder:
