--- a/yamls/bigtree.yml
+++ b/yamls/bigtree.yml
@@ -1,17 +1,18 @@
 # URL: https://www.bigtreecms.org/ https://github.com/bigtreecms/BigTree-CMS/
-# CVE-2013-4879 ? http://osvdb.org/96007 HTB23165
-# CVE-2013-4880 ? http://osvdb.org/96008 HTB23165
-# CVE-2013-4881 ? http://osvdb.org/96009 HTB23165
-# CVE-2013-5313 ? http://osvdb.org/96446 https://github.com/bigtreecms/BigTree-CMS/commit/4b0faa90fa8b9e1776c86db716894dcd7e6b4834
+# CVE-2013-4879 ? HTB23165
+# CVE-2013-4880 ? HTB23165
+# CVE-2013-4881 ? HTB23165
+# CVE-2013-5313 ? https://github.com/bigtreecms/BigTree-CMS/commit/4b0faa90fa8b9e1776c86db716894dcd7e6b4834
 # CVE-2015-XXXX 4.2.3 https://github.com/bigtreecms/BigTree-CMS/commit/e13aa4795cdeb1ab1dc0f5fd0b66df2d1296591d https://github.com/bigtreecms/BigTree-CMS/issues/205 CVE request http://www.openwall.com/lists/oss-security/2015/06/26/5
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-Cross-Site-Scripting-Vulnerabilities-38.html
 # CVE-2015-XXXX 4.2.4 http://blog.curesec.com/article/blog/BigTree-CMS-423-Multiple-SQL-Injection-Vulnerabilities-39.html
 # CVE-2016-XXXX 4.2.9 https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html
+# TODO: pending 4.2.12/4.1.16 https://github.com/bigtreecms/BigTree-CMS/pull/256 http://www.openwall.com/lists/oss-security/2016/11/11/13
 BigTree CMS:
   1:
     location: ['/core/version.php']
-    secure_version: '4.2.9'
+    secure_version: '4.2.12'
     regexp: ['.*?define.*?BIGTREE_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'https://blog.curesec.com/article/blog/BigTree-428-Object-Injection-amp-Improper-Filename-Sanitation-152.html'
+    cve: 'https://github.com/bigtreecms/BigTree-CMS/pull/256'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
