--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -1,3 +1,4 @@
+# NOTE: Security support of 1.2 series dropped September 2016 http://www.cmsmadesimple.org/2015/12/Announcing-CMSMS-2-1-Bahamas/
 #               1.0.3 SA23582
 #               1.6.3 SA36255
 # CVE-2007-2473 1.0.6 SA25082
@@ -14,20 +15,21 @@
 # CVE-2010-3884 1.8.1 SA40031
 # CVE-2010-4663 1.9.1 http://forum.cmsmadesimple.org/viewtopic.php?t=49245
 # CVE-2011-4310 1.9.4.3 http://www.cmsmadesimple.org/2011/08/Announcing-CMSMS-1-9-4-3---Security-Release/
-# CVE-2012-5450 1.11.2.1 http://osvdb.org/87235 SA51185 HTB23121 http://forum.cmsmadesimple.org/viewtopic.php?f=1&t=63545
+# CVE-2012-5450 1.11.2.1 SA51185 HTB23121 http://forum.cmsmadesimple.org/viewtopic.php?f=1&t=63545
 # CVE-2012-6064 1.11.2.1 SA51185 HTB23121 xfdb/79881 http://forum.cmsmadesimple.org/viewtopic.php?f=1&t=63545
-# CVE-2013-3929 TODO http://osvdb.org/100842 http://secunia.com/advisories/53920
+# CVE-2013-3929 TODO http://secunia.com/advisories/53920
 # CVE-2013-4167 1.11.7
-# CVE-2013-XXXX 1.11.8 http://osvdb.org/98876 http://www.cmsmadesimple.org/announcing-cmsms-1-11-8-fioreana/
+# CVE-2013-XXXX 1.11.8 http://www.cmsmadesimple.org/announcing-cmsms-1-11-8-fioreana/
 # CVE-2014-0334 TODO http://www.kb.cert.org/vuls/id/526062
 # CVE-2014-2092 TODO
-# CVE-2014-2245 1.11.10 http://osvdb.org/103854 http://dev.cmsmadesimple.org/project/changelog/4602 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/
+# CVE-2014-2245 1.11.10 http://dev.cmsmadesimple.org/project/changelog/4602 http://www.cmsmadesimple.org/2014/02/Announcing-CMSMS-1-11-10-Pinzon/
 # CVE-2014-XXXX 1.11.11 http://www.cmsmadesimple.org/2014/08/Announcing-CMSMS-1-11-11-San-Cristobal/
+# CVE-2016-2784 2.1.3/1.12.2 http://www.cmsmadesimple.org/2016/04/Announcing-CMSMS-2-1-3-Black-Point http://www.cmsmadesimple.org/2016/03/Announcing-CMSMS-1-12-2-kolonia
 CMSMS:
   1:
     location: ['/version.php']
-    secure_version: '1.11.11'
-    regexp: ['\$CMS_VERSION.*?(?P<version>[.0-9]{2,})']
-    cve: 'http://www.cmsmadesimple.org/2014/08/Announcing-CMSMS-1-11-11-San-Cristobal/'
+    secure_version: '2.1.3'
+    regexp: ['\$CMS_VERSION.*?(?P<version>2\.[.0-9]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-2784 http://www.cmsmadesimple.org/2016/04/Announcing-CMSMS-2-1-3-Black-Point'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
