--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -806,6 +806,7 @@ WordPress plugin persian-woocommerce-sms:
     cve: 'https://0x62626262.wordpress.com/2016/04/21/persian-woocommerce-sms-xss-vulnerability/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2012-6692 2.2
 WordPress plugin wordpress-seo:
   1:
     location: ['/wp-content/plugins/wordpress-seo/readme.txt']
