--- a/yamls/cmsms.yml
+++ b/yamls/cmsms.yml
@@ -1,4 +1,5 @@
 # NOTE: Security support of 1.2 series dropped September 2016 http://www.cmsmadesimple.org/2015/12/Announcing-CMSMS-2-1-Bahamas/ http://www.cmsmadesimple.org/2016/06/CMSMS-1-x-Nears-End-of-Life/
+# CVE-2005-2846 0.10.1 http://www.securityfocus.com/bid/14709 SA16654
 #               1.0.3 SA23582
 #               1.6.3 SA36255
 # CVE-2007-2473 1.0.6 SA25082
