--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1568,6 +1568,6 @@ WordPress plugin admin-font-editor:
     location: ['/wp-content/plugins/admin-font-editor/readme.txt']
     secure_version: 'N/A'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.vapidlabs.com/wp/wp_advisory.php?v=526'
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2016-1000126 http://www.vapidlabs.com/wp/wp_advisory.php?v=526'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
